Support Ecore/UML meta-models and do model-driven property evaluation